# mex-crc64-checksum

./: .gitignore  CMakeLists.txt  LICENSE  make.bat  readme.md  runtst.bat
ext-deps/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~  CMakePresets.json
ext-deps/BoostCrc/: CMakeLists.txt
inc/: crc.hpp
inc/application/: codes.hpp
inc/longpath/: longpath.hpp
inc/private/: chk_fmt.hpp  directory_checksum_mt.hpp  ext_def.hpp
matlab_code/+crc64/: FileChecksum.m  FolderChecksum.m  TextChecksum.m
matlab_code/+crc64/private/: mustBeFile.m  mustBeFolder.m  toHexString.m
matlab_code/test/: TestCrc64.m  TestFolderChecksum.m  checksum_test_data.json
matlab_code/test/private/: GenerateRandomFolder.m  checksum_test_data.json
src/: chk_fmt.cpp  crc.cpp  crc_mex.cpp  directory_checksum_mt.cpp  longpath.cpp  main.cpp
test/: CMakeLists.txt  keyboardmash.txt  maxbyte-1.txt  test-driver.bat
test/src/: fileutil.cpp  fileutil.hpp  hang_test.cpp  private_fileutil_windows.hpp
